--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -397,7 +397,7 @@ img {
   margin-left: 285px;
 }
 #hero .container {
-  height: 100vh;
+  /* height: 100vh; */
   display: flex;
   justify-content: center;
   align-items: center;
