--- a/assets/css/colors/orange.css
+++ b/assets/css/colors/orange.css
@@ -26,7 +26,7 @@
 .testimonials .testimonial-item .quote-icon-left,
 .testimonials .testimonial-item .quote-icon-right,
 a {
-  color: #183efa;
+  color: #ff651c;
 }
 .about .skills-content .progress-bar,
 .cursor-inner,
@@ -37,7 +37,7 @@ a {
   .swiper-pagination-bullet-active,
 .testimonials .swiper-pagination .swiper-pagination-bullet-active,
 ul.page-numbers li.active a {
-  background-color: #183efa;
+  background-color: #ff651c;
 }
 #footer .social-links a,
 #header .social-links a,
@@ -50,7 +50,7 @@ ul.page-numbers li.active a {
 .pricing .btn-buy,
 .style-switch-wrapper .purchse-btn,
 .switch {
-  background: #1a2a4d;
+  background: #ff651c;
 }
 #header .profile h1,
 .cursor-outer,
@@ -67,5 +67,5 @@ ul.page-numbers li.active a {
 .style-switch-wrapper .purchse-btn,
 ul.page-numbers li a,
 ul.page-numbers li.active a {
-  border-color: #183efa;
+  border-color: #ff651c;
 }
