--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -436,6 +436,9 @@ img {
 .hero-im {
   max-width: none;
 }
+.hero-logo {
+  max-height: 100px;
+}
 .hero-img {
   display: flex;
   justify-content: center;
