--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -245,9 +245,20 @@ img {
   display: block;
   max-width: 190px;
   border-radius: 20px;
-  box-shadow: 0 0 10px rgb(0 0 0 / 85%);
+  /* box-shadow: 0 0 10px rgb(0 0 0 / 85%); */
 }
-#header .profile h1 {
+#header .profile div img {
+  display: inline-block;
+  margin: 10px auto 10px auto;
+  vertical-align: middle;
+  max-width: 60px;
+}
+#header .profile div {
+  border-bottom: 1px solid #fa5b0f;
+  border-top: 1px solid #fa5b0f;
+  text-align: center;
+}
+#header .profile div h1 {
   font-size: 40px;
   padding: 10px 0;
   margin: 0;
@@ -255,15 +266,16 @@ img {
   font-weight: 600;
   -moz-text-align-last: center;
   text-align-last: center;
-  border-bottom: 1px solid #fa5b0f;
-  border-top: 1px solid #fa5b0f;
+
+  vertical-align: middle;
+  display: inline-block;
 }
 .navbar {
   position: relative;
   display: flex;
   justify-content: center;
   align-items: center;
-  height: calc(100vh - 280px);
+  height: calc(100vh - 310px);
   width: 100%;
   padding: 0;
   padding-top: 15px;
