--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -693,7 +693,7 @@ section {
   transition: ease-in-out 0.3s;
 }
 .about .image {
-  background: url("../img/me.jpg") center center no-repeat;
+  background: url("../img/me-2.gif") center center no-repeat;
   background-size: cover;
   height: 100%;
   transform: scale(1.1);
