--- a/Dark/assets/css/style.css
+++ b/Dark/assets/css/style.css
@@ -437,7 +437,7 @@ img {
 }
 .hero-img {
   display: flex;
-  max-width: 1000px;
+  /* max-width: 1000px; */
   margin: 40px auto;
   background: center;
   min-height: 140px;
@@ -506,7 +506,7 @@ img {
   color: rgb(0, 0, 0);
 }
 .hero-im {
-  max-width: none;
+  max-width: -webkit-fill-available;
 }
 .hero-logo {
   max-height: 100px;
@@ -527,7 +527,7 @@ img {
 }
 .hero-box .btn-scroll {
   transition: 0.4s;
-  color: rgba(255, 255, 255, 0.6);
+  color: rgba(0, 0, 0, 0.6);
   animation: up-down 1s ease-in-out infinite alternate-reverse both;
 }
 .hero-box .btn-scroll i {
@@ -692,7 +692,7 @@ section {
   transition: ease-in-out 0.3s;
 }
 .about .image {
-  background: url("../img/me.jpg") center center no-repeat;
+  background: url("../img/me-2.gif") center center no-repeat;
   background-size: cover;
   height: 100%;
   transform: scale(1.1);
@@ -1311,6 +1311,15 @@ section {
 #footer h3 {
   font-size: 36px;
   font-weight: 700;
+  color: #fff;
+  position: relative;
+  font-family: Lato, sans-serif;
+  padding: 0;
+  margin: 0 0 15px 0;
+}
+#footer h4 {
+  font-size: 26px;
+  font-weight: 500;
   color: #fff;
   position: relative;
   font-family: Lato, sans-serif;
